// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    12.345.678,90 HRK
  </h1>
</div>
`;

exports[`Test ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    123,45 HRK
  </h1>
</div>
`;
